# lightning-bolts

./: .codecov.yml  .gitignore  .mergify.yml  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  .run_local_tests.sh  .yapfignore  =1.7.0  CHANGELOG.md  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  environment.yml  path.bash.inc  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_dev_env.sh  test_detection.sh
.azure/: gpu-tests.yml
.circleci/: config.yml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labeling-config.yml  mergify.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  how-to-question.md
.github/workflows/: ci-checks.yml  ci-docs.yml  ci-install-pkg.yml  ci-schema.yml  ci-testing.yml  ci-tests.yml  ci_install-pkg.yml  ci_schema.yml  ci_test-base.yml  ci_test-full.yml  code-format.yml  docs-check.yml  format-pep8.yml  greetings.yml  install-pkg.yml  labeler.yml  pull.yml  pypi-release.yml
docs/: .build_docs.sh  Makefile  requirements.txt
docs/source/: autoencoders.rst  callbacks.rst  classic_ml.rst  conf.py  convolutional.rst  dataloaders.rst  datamodules.rst  datamodules_others.rst  datamodules_sklearn.rst  datamodules_vision.rst  datasets.rst  datasets_others.rst  deprecated.rst  gans.rst  governance.rst  index.rst  info_callbacks.rst  installation.rst  intro.rst  introduction_guide.rst  learning_rate_schedulers.rst  loggers.rst  losses.rst  lr_schedulers.rst  models.rst  models_howto.rst  object_detection.rst  readme.md  recommender_datamodules.rst  reinforce_learn.rst  rl.rst  self_supervised_callbacks.rst  self_supervised_models.rst  self_supervised_utils.rst  semi_sup_processing.rst  sklearn_datamodules.rst  stability.rst  transforms.rst  variational_callbacks.rst  vision_callbacks.rst  (+2 more)
lightning_bolts/: __init__.py
lightning_bolts/callbacks/: __init__.py
lightning_bolts/loggers/: __init__.py
pl_bolts/: __about__.py  __init__.py  datasets.py  info.py  setup_tools.py  submit.py
pl_bolts/callbacks/: __init__.py  byol_updates.py  data_monitor.py  ema.py  knn_online.py  printing.py  self_supervised.py  sparseml.py  ssl_online.py  torch_ort.py  variational.py
pl_bolts/datamodules/: MNISTDataModule.py  __init__.py  async_dataloader.py  base_datamodule.py  base_dataset.py  binary_emnist_datamodule.py  binary_mnist_datamodule.py  bolts_dataloaders_base.py  bolts_datamodule.py  cifar10_dataloaders.py  cifar10_datamodule.py  cifar10_dataset.py  cityscapes_datamodule.py  concat_dataset.py  dummy_dataset.py  emnist_datamodule.py  esc50_datamodule.py  experience_source.py  fashion_mnist_datamodule.py  imagenet_dataloaders.py  imagenet_datamodule.py  imagenet_dataset.py  kitti_datamodule.py  kitti_dataset.py  lightning_datamodule.py  mnist_dataloaders.py  mnist_datamodule.py  mnist_dataset.py  nnist_dataset.py  sklearn_dataloaders.py  sklearn_datamodule.py  sr_datamodule.py  ssl_amdim_datasets.py  ssl_imagenet_dataloaders.py  ssl_imagenet_datamodule.py  stl10_dataloaders.py  stl10_datamodule.py  stl10_sr_datamodule.py  submit.py  vision_datamodule.py  (+1 more)
pl_bolts/datasets/: __init__.py  array_dataset.py  base.py  base_dataset.py  cifar10.py  cifar10_dataset.py  concat_dataset.py  dummy_dataset.py  emnist_dataset.py  esc50_dataset.py  grasp_and_lift_eeg_dataset.py  grasp_and_lift_eeg_detection.py  imagenet_dataset.py  kitti_dataset.py  mnist_dataset.py  sr_celeba_dataset.py  sr_dataset_mixin.py  sr_mnist_dataset.py  sr_stl10_dataset.py  ssl_amdim_datasets.py  stl10_sr_dataset.py  utils.py
pl_bolts/loggers/: __init__.py  azureml.py  trains.py
pl_bolts/losses/: classification.py  giou.py  object_detection.py  reinforcement_learning.py  rl.py  self_supervised_learning.py
pl_bolts/metrics/: __init__.py  aggregation.py  object_detection.py
pl_bolts/models/: __init__.py  allennlp_template.py  mnist_module.py  mnist_pl_module.py  mnist_template.py
pl_bolts/name_this_module/: one_pixel_attacker.py  pixel_attacker.py
pl_bolts/optimizers/: __init__.py  lars.py  lars_scheduling.py  layer_adaptive_scaling.py  lr_scheduler.py
pl_bolts/transforms/: dataset_normalizations.py
pl_bolts/utils/: __init__.py  arguments.py  dataset_download.py  pretrained_weights.py  self_supervised.py  semi_supervised.py  shaping.py  ssl_utils.py  stability.py  types.py  warnings.py
ptl_bolts/: README.md  __init__.py
ptl_bolts/loggers/: __init__.py
pytorch_lightning/: README.md  __init__.py
pytorch_lightning/bolts/: __init__.py
pytorch_lightning_bolts/: README.md  __init__.py  mnist_template.py
pytorch_lightning_bolts/callbacks/: __init__.py
pytorch_lightning_bolts/models/: __init__.py  mnist_template.py
requirements/: base.txt  devel.txt  loggers.txt  models.txt  test.txt  typing.txt
src/pl_bolts/: __about__.py  __init__.py
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_imports.py  test_scripts.py  test_smoke.py  test_utilities.py
tests/_data_configs/: yolo.cfg
tests/base/: utils.py
tests/callbacks/: test_data_monitor.py  test_imports.py  test_info_callbacks.py  test_ort.py  test_param_update_callbacks.py  test_sparseml.py  test_variational_callbacks.py
tests/data/: yolo_giou.cfg
tests/datamodules/: test_dataloader.py  test_datamodules.py  test_experience_sources.py  test_experience_sources_og.py  test_imports.py  test_sklearn_dataloaders.py
tests/datasets/: test_array_dataset.py  test_base_dataset.py  test_datasets.py  test_imports.py  test_utils.py
tests/helpers/: boring_model.py
tests/loggers/: __init__.py  test_azureml.py  test_trains.py
tests/losses/: test_giou.py  test_imports.py  test_imports_rl.py  test_imports_self_supervised_learning.py  test_object_detection.py  test_rl_loss.py
tests/metrics/: test_aggregation.py  test_imports.py  test_object_detection.py
tests/models/: self_supervised.py  test_autoencoders.py  test_base_templates.py  test_classic_ml.py  test_detection.py  test_diffeq.py  test_executable_scripts.py  test_gans.py  test_mnist_templates.py  test_resnets.py  test_scripts.py  test_vaes.py  (+4 more)
(+578 files in other folders)
