[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --strict-markers
    --doctest-modules
    --durations=0
    --color=yes


[coverage:run]
parallel = True
#concurrency = thread, multiprocessing
concurrency = thread

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass
    if __name__ == .__main__.:
# TODO, remove this ignores in future
omit =
    pl_bolts/datamodules/*_datamodule.py
    pl_bolts/datamodules/*_dataset.py


[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore =
    # Ignore "Missing whitespace after ',', ';', or ':'"
    E231
    # Ignore "Do not assign a lambda expression, use a def"
    E731
    # Ignore "Line break occurred before a binary operator"
    W503
    # Ignore "Line break occurred after a binary operator"
    W504
    # Ignore "Invalid escape sequence 'x'"
    W605
    # whitespace before ':'
    E203


[check-manifest]
ignore =
    *.yml
    .github
    .github/*
    .circleci


[metadata]
license_file = LICENSE
description-file = README.md
# long_description = file:README.md
# long_description_content_type = text/markdown
