[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --strict-markers
    --doctest-modules
    --durations=0
    --color=yes


[coverage:run]
parallel = True
#concurrency = thread, multiprocessing
concurrency = thread

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass
    if __name__ == .__main__.:
# TODO, remove this ignores in future
omit =
    pl_bolts/datamodules/*_datamodule.py
    pl_bolts/datamodules/*_dataset.py


[check-manifest]
ignore =
    *.yml
    .github
    .github/*
    .circleci


[metadata]
license_file = LICENSE
description-file = README.md
# long_description = file:README.md
# long_description_content_type = text/markdown
